    when SB-DEBUG:*SHOW-ENTRY-POINT-DETAILS* is NIL.
  * unreadably printed representation of hash-tables now includes
    weakness if any.
  * bug fix: on x86 and x86-64 pointer based EQ-hashing now uses the
    full address of the object, and none of the tag bits.
  * bug fix: readably printing hash-tables now respects other printer
    control variables. (reported by Cedric St-Jean)
  * bug fix: compiler gave a bogus STYLE-WARNING for the :SYNCHRONIZED
    keyword with MAKE-HASH-TABLE.
  * bug fix: export SB-POSIX:MKSTEMP.
  * bug fix: SORT was not interrupt safe.
  * bug fix: XREF accounts for the last node of each basic-block as
    well.
  * bug fix: MAKE-INSTANCE optimizations interacted badly with
    non-keyword :DEFAULT-INITARGS in the presence of :BEFORE/:AFTER
    methods on SHARED-INITIALIZE. (thanks to Matt Marjanovic)

changes in sbcl-1.0.14 relative to sbcl-1.0.13:
  * new feature: SB-EXT:*EXIT-HOOKS* are called when the process exits
    (see documentation for details.)
  * revived support for OpenBSD (contributed by Josh Elsasser)
  * partially fixed bug #108: ROOM no longer suffers from occasional
    (AVER (SAP= CURRENT END)) failures.
  * fixed bug #402: proclaimed non-standard declarations in DEFMETHOD
    bodies no longer cause a WARNING to be signalled. (reported by
    Vincent Arkesteijn)
  * bug fix: (TRUNCATE X 0) when X is a bignum now correctly signals
    DIVISION-BY-ZERO. Similarly for MOD and REM (which suffered due to
    the bug in TRUNCATE.) (reported by Michael Weber)
  * bug fix: SB-SPROF:REPORT no longer signals an error if there are
    no samples. (reported by Andy Hefner)
  * bug fix: functions compiled using (COMPILE NIL '(LAMBDA ...))
    no longer appear as (NIL ...) frames in backtraces.
  * bug fix: RESOLVE-CONFLICT (and the other name conflict machinery)
    is now actually exported from SB-EXT as documented.  (reported by
    Maciej Katafiasz)
  * bug fix: sb-aclrepl now correctly understands how to inspect